docs/wherehaus_sty.css
@font-face { font-family: Gilroy; src: url("Gilroy-ExtraBold.otf"); }
@font-face { font-family: Monosten; src: url("Monosten-A-webfont.ttf"); }

:root 
{
    --grey: #9d9d9d;
    --dark-grey: rgba(0, 0, 0, 0.69);
    --off-white: #f0f6f8;
    --wolf-red: #FA5F28;
    --breakpoint-xs: 0;
    --breakpoint-sm: 576px;
    --breakpoint-md: 768px;
    --breakpoint-lg: 992px;
    --breakpoint-xl: 1200px;
    --title: Gilroy, Futura, Helvetica, sans-serif;
    --monospace: Monosten, monospace;
}

html
{
    background: var(--off-white);
    margin: 40px 15%;
}




/* menu */

header
{
    margin-bottom: 140px;
}

.logo
{
    width: 140px;
}

.menu-div
{
    text-align: right;
    display: inline-block;
    width: 80%;
}

a
{ 
    text-decoration: none;
}

.menu
{
    font-family: var(--monospace);
    font-size: 0.7rem;
    color: var(--grey);
    margin-left: 40px;
}

.menu:hover
{
    border-bottom-style: solid;
    border-bottom-color: var(--grey);
    border-bottom-width: 2px;
}




/* hero */

.hero
{
    display: flex;
}

.hero-div
{
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    width: 50%;
    position: relative;
}

h1
{
    font-family: var(--title);
    font-size: 2.5rem;
    color: var(--dark-grey);
}

p
{
    font-family: var(--monospace);
    font-size: 1.1rem;
    color: var(--dark-grey);
    margin-bottom: 70px;
}




/* button */

.button
{
    padding: 20px 50px;
    box-shadow: rgba(17,17,17,0.3) 0 5px 15px 0;
    background-color: rgba(255, 255, 255, 0.57);
    border-radius: 80px;
    transition: all 0.2s cubic-bezier(0.4, 0.0, 0.2, 1);
    outline: none;
    font-family: var(--title);
    font-size: 1rem;
    letter-spacing: 2px;
    color: var(--dark-grey);
}

.button:hover
{
    box-shadow: rgba(17,17,17,0.3) 0 10px 25px 0;
}

